--- a/prob1_2024/indep.html
+++ b/prob1_2024/indep.html
@@ -392,9 +392,12 @@ The statement of this theorem had a serious flaw, which was pointed out by Bhraj
 <b><i>Proof:</i></b>
 The proof is easy if $A_1$  and $A_2$  are both finite. 
 <p></p>
-For the case where at least one of $A_1,A_2$  is infinite, we need to use the fact that 
+For the case where at least one of $A_1,A_2$  is infinite (countably infinite as
+ $\Omega_i$'s are countable), we need to use the fact that 
 infinite series of nonnegative terms may be 
 <a href="series.html">rearranged without changing the value</a> of the series. 
+<p></p>
+
 <b><i>[QED]</i></b>
 </p>
 
