--- a/prob1_2024/condl.html
+++ b/prob1_2024/condl.html
@@ -520,14 +520,47 @@ Similarly, $P(T\leq k-1) = \left(\frac{k}{N}\right)^2.$
 So $P(T=k) = \left(\frac{(k+1)^2-k^2}{N^2} = \frac{2k+1}{N^2}.$
 <p></p>
 (c)   $R=|Y-X|$  can take values in 0,1,...,$N.$ 
+<p></p>
+$P(R=0) = P(X=Y) = \frac{1}{N+1}.$
+<p></p>
+For $k=1,...,N,$  we have $P(R=k) = P(R=k \&amp; X &lt; Y) + P(R=k \&amp; X=Y) + P(R=k \&amp; X &gt; Y).$
+<p></p>
+Now $P(R=k \&amp; X=Y) =0.$
+<p></p>
+Also $P(R=k \&amp; X &lt; Y) =P(R=k \&amp; X &gt; Y).$
+<p></p>
+For $\{R=k\ &amp; X &lt; Y\}$  to happen we must have $X = 0,...,N-k$  and correspondingly $Y = k,...,N.$  
+<p></p>
+So $P(R=k\ &amp; X &lt; Y) = \frac{N-k+1}{N}.$
+<p></p>
+Hence $P(R=k) = \frac{2(N-k+1)}{N}.$
 </div></p>
 
 </p>
 ::<p>
-<b>EXERCISE 6:</b>&nbsp;<img width="" src="image/condist6.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 6:</b>&nbsp;<img width="" src="image/condist6.png" style="vertical-align:text-top;">
+<p><a
+href="javascript:hideShow('lab6')"><b>Hint:</b></a><div
+class="ans" id="lab6">
+(a) $P(X=x) = \sum_y P(X=x,Y=y) = \sum_y g(x)h(y) = g(x)\sum_y h(y).$
+<p></p>
+(b) $P(Y=y) = \sum_x P(X=x,Y=y) = \sum_x g(x)h(y) = h(y)\sum_x g(x).$
+<p></p>
+(c) We know that $\sum_x\sum_y P(X=x,Y=y) = 1.$  Hence $\sum_x\sum_y g(x)h(y) = 1,$  <i>i.e.</i>, $\sum_xg(x)\sum_y h(y) = 1.$
+<p></p>
+(d) To show $\forall x, y~~P(X=x,Y=y) = P(X=x)P(Y=y).$
+<p></p>
+Take any $x,y.$
+<p></p>
+Then $P(X=x)P(Y=y) = \big[\sum_y h(y) \big]g(x)\big[\sum_x g(x) \big]h(y) = g(x)h(y) = P(X=x,Y=y).$
+</div></p>
+
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 7:</b>&nbsp;<img width="" src="image/condist7.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 7:</b>&nbsp;<img width="" src="image/condist7.png" style="vertical-align:text-top;">
+Here "density" means "PMF". 
+<hr>
 </p>
 ::<p>
 <b>EXERCISE 8:</b>&nbsp;<img width="" src="image/condist8.png" style="vertical-align:text-top;"><hr>
@@ -592,8 +625,8 @@ refers to Example 2m. <a href="image/kirti1.png">Here is that example.</a>
 <p></p>
 Will the result hold in general if the $X_i$'s are not independent?
 <p><a
-href="javascript:hideShow('lab6')"><b>Hint:</b></a><div
-class="ans" id="lab6">No, the result may not hold if the $X_i$'s have a dependence structure that is
+href="javascript:hideShow('lab7')"><b>Hint:</b></a><div
+class="ans" id="lab7">No, the result may not hold if the $X_i$'s have a dependence structure that is
  asymetric. A counterexample is as follows. 
 <p></p>
 $X_1 = $  outcome of a roll of a fair die. $X_2$  is obtained from $X_1$  by
