--- a/prob1_2024/vit.html
+++ b/prob1_2024/vit.html
@@ -414,7 +414,7 @@ Hence we should learn the following terminology.
  instead of taking $P:{\mathcal P}(\Omega)\rightarrow[0,1],$  we shall now take $P:{\mathcal
  F}\rightarrow[0,1],$  where ${\mathcal F}\subseteq{\mathcal P}(\Omega)$  is the collection of all the
  "good" subsets of $\Omega.$  What properties should these "good" subsets have? Well, since
- we are not going to manipulate the events using set theory, ${\mathcal F}$   should naturally be closed under the set
+ we are  going to manipulate the events using set theory, ${\mathcal F}$   should naturally be closed under the set
  operations: union, intersection and complementation. Since we want to use axiom 3, we actually need ${\mathcal F}$ 
  be closed under <i>countable</i>  unions (and hence <i>countable</i>  intersections, by de Morgan). 
 <h1><a
@@ -482,7 +482,7 @@ ${\mathcal F}$  is any $\sigma$-algebra over $\Omega$
 $\mu(\phi)=0$
 </li>
 
-<li>$\forall A_1,A_2,...\in{\mathcal F}~~\mu(\cup A_n)=\sum\mu(A_n).$</li>
+<li>$\forall \mbox{ disjoint } A_1,A_2,...\in{\mathcal F}~~\mu(\cup A_n)=\sum\mu(A_n).$</li>
 
 </ol>
 
