--- a/prob1_2024/vit.html
+++ b/prob1_2024/vit.html
@@ -487,6 +487,8 @@ $\mu(\phi)=0$
 </ol>
 
 </fieldset>
+Corrected a typo pointed out by Bhrajishnu.
+<p></p>
 As you may easily see, "length", "area", "mass", "volume", "cardinality" (for finite sets) are all examples of measures.
 <p></p>
 
