--- a/prob1_2024/indep.html
+++ b/prob1_2024/indep.html
@@ -387,7 +387,7 @@ With this natural extension, we have the following important theorem.
 Let $\Omega_1,\Omega_2,\Omega,P_1,P_2,P$  be as above. Then for any $A_1\subseteq \Omega_1$  and any 
 $A_2\subseteq \Omega_2$  we have $P(A_1\times A_2)  = P_1(A_1)P_2(A_2).$
 </fieldset>
-The statement of this theorem had a serious flaw, which was pointed out by Bhrajishnu. The flaw has now been corrected.
+The statement of this theorem had a serious flaw, which was pointed out by Vrajishnu. The flaw has now been corrected.
 <p>
 <b><i>Proof:</i></b>
 The proof is easy if $A_1$  and $A_2$  are both finite. 
