--- a/prob1_2024/condl.html
+++ b/prob1_2024/condl.html
@@ -560,59 +560,243 @@ Then $P(X=x)P(Y=y) = \big[\sum_y h(y) \big]g(x)\big[\sum_x g(x) \big]h(y) = g(x)
 ::<p>
 <b>EXERCISE 7:</b>&nbsp;<img width="" src="image/condist7.png" style="vertical-align:text-top;">
 Here "density" means "PMF". 
+<p><a
+href="javascript:hideShow('lab7')"><b>Hint:</b></a><div
+class="ans" id="lab7">
+(a) $(X_1,...,X_r)$  can take values $(x_1,...,x_r)$  where each $x_i$  is a nonnegative integer and $\sum_1^r x_i = 2r.$ 
+<p></p>
+We consider the random experiment of dropping the balls one by one into the boxes. For each ball have $r $ posible destinations.
+<p></p>
+So $|\Omega| = (2r)^r.$
+<p></p>
+Now fix some $(x_1,...,x_r)$  as above. The event $A=\{(X_1,...,X_r) = (x_1,...,x_r)\}$  may be obtained as follows.
+<p></p>
+Pick and order $x_i$  balls to drop into box $i$ one by one. 
+<p></p>
+So $|A| = \frac{(2r)!}{x_1!\times\cdots\times x_r!}.$
+<p></p>
+Hence 
+$P\{(X_1,...,X_r) = (x_1,...,x_r)\}= \frac{ |A| }{ |\Omega| }.$
+<p></p>
+(b) $\frac{ (2r)!}{(4r)^r}. $
+</div></p>
+
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 8:</b>&nbsp;<img width="" src="image/condist8.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 8:</b>&nbsp;<img width="" src="image/condist8.png" style="vertical-align:text-top;">
+<p><a
+href="javascript:hideShow('lab8')"><b>Hint:</b></a><div
+class="ans" id="lab8">
+(a) $P(X_1+X_2=k) = \binom{n}{k} (p_1+p_2)^k p_3^{n-k}$  for $k=0,1,...,n.$
+<p></p>
+(b) 
+$$\begin{eqnarray*}
+P(X_2=y|X_1+X_2 = z)
+&amp; = &amp; \frac{P(X_2=y \&amp; X_1+X_2=z)}{P(X_1+X_2=z)} \\
+&amp; = &amp; \frac{P(X_1=z-y\&amp;X_2=y)}{P(X_1+X_2=z)} \\
+&amp;  = &amp; \frac{ \frac{n!}{(z-y)!y!(n-z)!} p_1^{z-y} p_2^y p_3^{n-z} }{ \binom{n}{z} (p_1+p_2)^z p_3^{n-z} }
+&amp; = &amp; \cdots.
+\end{eqnarray*}$$
+</div></p>
+
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 9:</b>&nbsp;<img width="" src="image/condist9.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 9:</b>&nbsp;<img width="" src="image/condist9.png" style="vertical-align:text-top;">
+<p><a
+href="javascript:hideShow('lab9')"><b>Hint:</b></a><div
+class="ans" id="lab9">
+(a) $1-\left(\frac{5}{6}\right)^6.$
+<p></p>
+(b) For $n$  rolls $P($ at least one 6$)=1-\left(\frac 56\right)^n.$
+<p></p>
+We need $n$  such that $1-\left(\frac 56\right)^n\geq \frac 12.$  
+<p></p>
+Direct computation shows $n\geq 4.$
+</div></p>
+
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 10:</b>&nbsp;<img width="" src="image/condist10.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 10:</b>&nbsp;<img width="" src="image/condist10.png" style="vertical-align:text-top;">
+<p></p>
+Imagine this set up: A coin with $P(H)=p$  is repeadly tossed. Success means $H.$
+<p><a
+href="javascript:hideShow('lab10')"><b>Hint:</b></a><div
+class="ans" id="lab10">
+$(1-p)^{\sum_1^r (x_i-1)} p^r.$
+</div></p>
+
+<p></p>
+
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 11:</b>&nbsp;<img width="" src="image/condist11.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 11:</b>&nbsp;<img width="" src="image/condist11.png" style="vertical-align:text-top;">
+<p></p>
+This is a continuation of the last problem.
+<p><a
+href="javascript:hideShow('lab11')"><b>Hint:</b></a><div
+class="ans" id="lab11">
+$P(T_1=x|N_n=1) = \frac{P(T_1=x\&amp; N_n=1)}{P(N_n=1)} = \frac{p(1-p)^{n-1}}{np(1-p)^{n-1}}] = \frac 1n.$
+</div></p>
+
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 12:</b>&nbsp;<img width="" src="image/condist12.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 12:</b>&nbsp;<img width="" src="image/condist12.png" style="vertical-align:text-top;">
+<p></p>
+This is a continuation of the last problem.
+<p><a
+href="javascript:hideShow('lab12')"><b>Hint:</b></a><div
+class="ans" id="lab12">
+Same logic as in the last solution.
+</div></p>
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 13:</b>&nbsp;<img width="" src="image/morecond1.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 13:</b>&nbsp;<img width="" src="image/morecond1.png" style="vertical-align:text-top;">
+<p><a
+href="javascript:hideShow('lab13')"><b>Hint:</b></a><div
+class="ans" id="lab13">
+By symmetry, the answer is $\frac 1n$  if $k=1.$  So, for general $k$  the answer is $\frac kn.$
+</div></p>
+
+<hr>
 </p>
 ::<p>
 <b>EXERCISE 14:</b>&nbsp;<img width="" src="image/morecond2.png" style="vertical-align:text-top;">
-Let $I_j$ be the indicator variable for whether there is a
+<p><a
+href="javascript:hideShow('lab14')"><b>Hint:</b></a><div
+class="ans" id="lab14">Let $I_j$ be the indicator variable for whether there is a
 record at position $j.$ Then $P(I_j=1)$ may be computed
 by total probability:
 $$
 P(I_j=1) = \sum_{k=j}^n P(X_j=k)P(I_j=1|X_j=k).
 $$
-Similarly for $P(I_jI_k=1).$
+Similarly for $P(I_jI_k=1).$</div></p>
+
 <hr>
 </p>
 ::<p>
 <b>EXERCISE 15:</b>&nbsp;<img width="" src="image/morecond3.png" style="vertical-align:text-top;">
-The problem is basically optimising $\sum P_i^2$ subject
-to $\sum P_i$ being fixed. Cauchy-Scwartz might help.  
+<p><a
+href="javascript:hideShow('lab15')"><b>Hint:</b></a><div
+class="ans" id="lab15">The problem is basically optimising $\sum P_i^2$ subject
+to $\sum P_i$ being fixed. Cauchy-Scwartz might help.  </div></p>
+
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 16:</b>&nbsp;<img width="" src="image/morecond4.png" style="vertical-align:text-top;"><p></p>This problem (from Ross)
-refers to Example 2m. <a href="image/kirti1.png">Here is that example.</a>
+<b>EXERCISE 16:</b>&nbsp;<img width="" src="image/morecond4.png" style="vertical-align:text-top;">
+<p><a
+href="javascript:hideShow('lab16')"><b>Hint:</b></a><div
+class="ans" id="lab16">
+Let the black balls be labelled $b_1,...,b_m.$  
+<p></p>
+Let $X_i=\left\{\begin{array}{ll}1&\text{if }\mbox{no white drawn before }b_i\\
+0&\text{otherwise.}\end{array}\right..$
+<p></p>
+Then $X= 1+\sum_1^m X_i.$
+<p></p>
+Also, $E(X_i) = \frac{1}{n+1}$. To see this consider the $n$  white balls plus $b_i.$  Out of these $n+1$ 
+ balls $b_i$  has the chance $\frac{1}{n+1}$  to come first. 
+<p></p>
+(a) $V(X_i) = \frac{n}{(n+1)^2}.$  
+<p></p>
+Also for $i\neq j$  we have $E(X_iX_j) = \frac{2}{(n+2)(n+1)}$    (because out of the $n$  white balls plus $b_i$ 
+ and $b_j$  any of the $\binom{n+2}{2}$  pairs can come first with equal probability).
+<p></p>
+(b) Let $Y_i$  be as given in the hint. Let's take an example to 
+understand how $Y_i$'s are defined. Suppose that we have $m=20$  black and $n=3$  white balls. 
+Here is one way they may turn up:
+<blockquote>
+B B Y Y B B B B B  Y
+</blockquote>
+Then $Y_1 = 2$  (as there are two B's preceding the first W), $Y_2=0$  (since the second W is immediately after
+ the first), and $Y_3 = 5$  (because there are as many B's between the second and third W). 
+<p></p>
+We shall argue using bijection that $Y_i$'s are all identically distributed. Let's 
+try to show that $P(Y_1=0) = P(Y_2=0).$  The outcome shown above is in the event $\{Y_2=0\}.$  
+<p></p>
+Now just swap the first two W's (along with B's  immediately preceding it) to get:
+<blockquote>
+ Y B B Y B B B B B  Y
+</blockquote>
+Clearly, this is another possible outcome which is inside $\{Y_1=0\}.$  
+It is not difficult to see (check!) that this swap is a bijection between the events $\{Y_1=0\}.$  and $\{Y_2=0\}.$ 
+If the bijection is denoted by $f,$  then $\forall \omega\in\Omega~~P(\omega) = P(f(\omega))$  (why?)
+<p></p>
+Hence $P\{Y_1=0\} = P\{Y_2=0\}.$
+<p></p>
+In general, we see that $Y_i$'s are all identically distributed. Now (b) follows immediately from (a) applied to each
+ $Y_i$  separately. 
+</div></p>
+
 <hr>
 </p>
 ::<p>
-<b>EXERCISE 17:</b>&nbsp;<img width="" src="image/morecond5.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 17:</b>&nbsp;<img width="" src="image/morecond5.png" style="vertical-align:text-top;">
+<p><a
+href="javascript:hideShow('lab17')"><b>Hint:</b></a><div
+class="ans" id="lab17">
+Let $T = \lambda X_1+ (1-\lambda) X_2.$  
+<p></p>
+Then $V(T) = \lambda^2 V(X_1) + (1-\lambda)^2 V(X_2),$  since $X_1,X_2$  are independent.
+<p></p>
+Thus, $V(T) = \lambda^2 \sigma_1^2 + (1-\lambda)^2 \sigma_2^2 = f(\lambda),$  say. 
+<p></p>
+Then $f'(\lambda) = 2 \sigma^2_1 \lambda - 2 \sigma^2_2(1-\lambda).$
+<p></p>
+Solving $f'(\lambda) = 0$  we get $\lambda = \frac{\sigma^2_2}{\sigma^2_1+\sigma^2_2}.$
+<p></p>
+This is desirable because we are giving more weight to the $X_i$  that has less variance (<i>i.e.</i>, is more stable). 
+</div></p>
+
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 18:</b>&nbsp;<img width="" src="image/morecond6.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 18:</b>&nbsp;<img width="" src="image/morecond6.png" style="vertical-align:text-top;">
+<p><a
+href="javascript:hideShow('lab18')"><b>Hint:</b></a><div
+class="ans" id="lab18">
+Just like $(a+b)(a-b) = a^2-b^2.$  
+</div></p>
+
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 19:</b>&nbsp;<img width="" src="image/morecond7.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 19:</b>&nbsp;<img width="" src="image/morecond7.png" style="vertical-align:text-top;">
+<p></p>
+Do this only for discrete $X.$
+<p><a
+href="javascript:hideShow('lab19')"><b>Hint:</b></a><div
+class="ans" id="lab19">
+$E(X|Y=y) = \sum_x x P(X=x|Y=y) = \sum_x x P(X=x),$
+since $X,Y$  independent. 
+<p></p>
+Hence the result.
+</div></p>
+
+<hr>
 </p>
 ::<p>
-<b>EXERCISE 20:</b>&nbsp;<img width="" src="image/morecond8.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 20:</b>&nbsp;<img width="" src="image/morecond8.png" style="vertical-align:text-top;">
+<p></p>
+Do this for discrete $X, Y$  only. If $X$  can take values $x_1,x_2,x_3,...$  with
+ positive probabilities, then
+ you are prove
+$$\forall i~~E(g(X)Y|X=x_i] = g(x_i)E(Y|X=x_i).$$
+<p><a
+href="javascript:hideShow('lab20')"><b>Hint:</b></a><div
+class="ans" id="lab20">
+Take any $i.$
+<p></p>
+Then $E(g(X)Y|X=x_i) = \sum_y g(x_i) y P(Y=y|X=x_i) = g(x_i) \sum_y y P(Y=y|X=x_i) = g(x_i) E(Y|X=x_i),$  as required.
+</div></p>
+
+<hr>
 </p>
 ::<p>
 <b>EXERCISE 21:</b>&nbsp;<img width="" src="image/morecond9.png" style="vertical-align:text-top;"><hr>
@@ -625,8 +809,8 @@ refers to Example 2m. <a href="image/kirti1.png">Here is that example.</a>
 <p></p>
 Will the result hold in general if the $X_i$'s are not independent?
 <p><a
-href="javascript:hideShow('lab7')"><b>Hint:</b></a><div
-class="ans" id="lab7">No, the result may not hold if the $X_i$'s have a dependence structure that is
+href="javascript:hideShow('lab21')"><b>Hint:</b></a><div
+class="ans" id="lab21">No, the result may not hold if the $X_i$'s have a dependence structure that is
  asymetric. A counterexample is as follows. 
 <p></p>
 $X_1 = $  outcome of a roll of a fair die. $X_2$  is obtained from $X_1$  by
