--- a/prob1_2024/condl.html
+++ b/prob1_2024/condl.html
@@ -852,7 +852,20 @@ $X_1 = $  outcome of a roll of a fair die. $X_2$  is obtained from $X_1$  by
 <b>EXERCISE 33:</b>&nbsp;<img width="" src="image/morecond21.png" style="vertical-align:text-top;"><hr>
 </p>
 ::<p>
-<b>EXERCISE 34:</b>&nbsp;<img width="" src="image/morecond22.png" style="vertical-align:text-top;"><hr>
+<b>EXERCISE 34:</b>&nbsp;<img width="" src="image/morecond22.png" style="vertical-align:text-top;">
+<p><a
+href="javascript:hideShow('lab22')"><b>Hint:</b></a><div
+class="ans" id="lab22">
+(a) Let's take an example with $n=10$  and $k=3.$  We are showing the selected balls in red:
+<blockquote>
+1 <font color="#ff0000">2 3</font> 4 5 <font color="#ff0000">6</font> 7 8 9 10
+</blockquote>
+Here $X = 6$  and $R = 4.$  
+<p></p>
+You should be able to see directly that in general $X+R=n.$
+</div></p>
+
+<hr>
 </p>
 
 <hr/>
